--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,10 +1,16 @@
 #canvas {
-  width: 800px;
-  height: 800px;
+  width: 100%;
+  height: auto;
   border: 5px solid #814d23;
   background-color: rgba(255, 255, 255, 0.336);
   display: block;
   margin: 0rem auto;
+}
+
+#touch-controls {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 200px;
 }
 
 #specplayers {
@@ -46,7 +52,7 @@
   text-shadow: 0px 0px 2px #000000;
   position: relative;
   height: 100%;
-  background-image: url(/bark1.jpg);
+  background-image: url(/assets/img/bark.jpg);
   background-size: 300px;
   box-shadow: 0px 0px 4px;
   // border: 5px solid #814d23;
@@ -80,13 +86,13 @@ body {
 }
 
 #startScreen, #gameScreen {
-  height: 100vh;
+  height: 90vh;
   position: relative;
 }
 
 #startScreen_background {
   position: relative;
-  background-image: url("/startScreen_background.jpg");
+  background-image: url("/assets/img/startScreen_background.jpg");
   filter: blur(4px);
   /* Full height */
   height: 100%; 
@@ -206,6 +212,22 @@ body {
   right: 2%;
   bottom: 2%;
 }
+
+@media (min-width: 768px) {
+  #canvas {
+    width: 800px;
+    height: 800px;
+  }
+  #startScreen, #gameScreen {
+    height: 100vh;
+    position: relative;
+  }
+  #touch-controls {
+    display: none;
+    touch-action: none;
+    visibility: hidden;
+  }
+} 
 
 @-webkit-keyframes scroll {
   100% {
