--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,5 @@
 * {
-  color: #000000;
+  // color: #000000;
   // font-size: 25px;
 }
 
@@ -16,6 +16,27 @@ body {
   font-size: 1.1rem;
 }
 
+.hidden-timer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  font-size: 7rem;
+  color: rgba(0, 0, 0, 0.068)!important;
+}
+
+.debug {
+  font-size: .8rem;
+}
+
+.dual-display {
+  display: flex;
+  .content {
+    margin-right: 1rem;
+    flex-grow: 1;
+  }
+}
+
 #canvas {
   width: 100%;
   height: auto;
@@ -23,6 +44,53 @@ body {
   background-color: rgba(255, 255, 255, 0.336);
   display: block;
   margin: 0rem auto;
+}
+
+.scoreboard-container {
+  position: absolute;
+  top: 0px;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  .scoreboard-background {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.75);
+  }
+  .scoreboard {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    transform: translateX(-50%) translateY(-50%);
+    background-color: peachpuff;
+    border: solid 5px #000;
+    padding: .5rem;
+    &-nickname {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+    .player-tag {
+      background-color: rgb(255, 206, 163);
+      border: 2px solid rgba(0, 0, 0, 0.5);
+      margin: 1rem 3rem;
+      box-shadow: 0px 0px 1px 1px #000;
+    }
+    .out {
+      position: relative;
+      &:after {
+        position: absolute;
+        left: 0px;
+        content: "";
+        transform: translateY(50%);
+        top: 50%;
+        width: 100%;
+        height: 3px;
+        background-color: rgb(255, 64, 64);
+        box-shadow: 0px 0px 3px #000 
+      }
+    }
+  }
 }
 
 #touch-controls {
@@ -154,7 +222,7 @@ body {
 }
 
 .ad-cosmic {
-  cursor: pointer;
+  // cursor: pointer;
   background-color: #000000;
   background-image: url(https://cosmicstudios.xyz/assets/img/backgrounds/bg-scroll.png);
   animation: 100s scroll infinite linear;
