Getting repo up to date

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -18,6 +18,13 @@ body {
   font-size: 1.1rem;
 }
 
+.powerup-times {
+  position: absolute;
+  font-size: 2rem;
+  top: -40px;
+  left: 80px;
+}
+
 .hidden-timer {
   position: absolute;
   top: 50%;
